:bug: Fix quick settings button partially hidden by scrollbar in absolute mode
Fixes #345

--- a/styles/minimap.less
+++ b/styles/minimap.less
@@ -24,6 +24,10 @@ atom-text-editor::shadow, atom-text-editor {
         position: relative;
         right: initial;
       }
+
+      .open-minimap-quick-settings {
+        right: 16px;
+      }
     }
 
     &::shadow {
